<resources>
    <string name="app_name">Go-cak App</string>

    <!--<string name="google_maps_key">AIzaSyDr8m7NB2XTj84kxOVgYYESWwvQFDGqTas</string>-->

    <string name="title_activity_register">Register</string>
    <string name="no_telp">No Telp</string>
    <string name="masuk">Masuk</string>
    <string name="daftar">Daftar</string>
    <string name="password">Password</string>
    <string name="name_lengkap">Nama Lengkap</string>
    <string name="no_telp_masih_kosong">No telp masih kosong</string>
    <string name="password_masih_kosong">Password masih kosong</string>
    <string name="password_minimal">Password minimal 4 karakter</string>
    <string name="nama_lengkap_masih_kosong">Name lengkap masih kosong</string>
    <string name="kesalahan_daftar">Terjadi kesalahan daftar, periksa Nama Lengkap, No Telp dan Password Anda.</string>
    <string name="kesalahan_login">Terjadi Kesalahan Login, Periksa No Telp dan Password Anda.</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="lokasi">Lokasi</string>
    <string name="detail_lokasi">Detail Lokasi</string>
    <string name="please_try_again">Coba lagi</string>
    <string name="order_sekarang">Order Sekarang</string>
    <string name="gocak_trans">Go-Cak Trans</string>
    <string name="gocak_services">Go-Cak Services</string>
    <string name="cek_kembali_tujuan">Cek kembali lokasi tujuan Anda</string>
    <string name="order_gagal">Order gagal. Coba lagi.</string>
    <string name="koneksi_bermasalah">Koneksi bermasalah. Coba lagi.</string>
    <string name="biaya_tambah">Maksimal 2 orang penumpang, lebih dari 2 penumpang dikenakan tarip 30% per orang dari tarip normal</string>
    <string name="title_activity_maps">Map</string>

</resources>
