<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/bg_gocak"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimaryTransparent"/>


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="72dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/logogocak"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:gravity="center"
                    android:text="Login"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                    android:textColor="@android:color/white"/>

            </RelativeLayout>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <!--<RelativeLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:fitsSystemWindows="true"-->
        <!--android:layout_weight="55"-->
        <!--android:background="@drawable/bg_gocak">-->

        <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:background="@color/colorPrimaryTransparent"/>-->


        <!--<ImageView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="72dp"-->
        <!--android:layout_centerInParent="true"-->
        <!--android:src="@drawable/logogocak"-->
        <!--/>-->

        <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_margin="@dimen/activity_vertical_margin"-->
        <!--android:gravity="center"-->
        <!--android:text="Login"-->
        <!--android:textAppearance="@style/TextAppearance.AppCompat.Display2"-->
        <!--android:textColor="@android:color/white"/>-->

        <!--</RelativeLayout>-->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="45"
            android:background="@color/bg_white"
            android:orientation="vertical"
            android:padding="@dimen/activity_vertical_margin">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/phone_tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/phone_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:drawableLeft="@drawable/ic_form_phone"
                    android:drawablePadding="@dimen/activity_vertical_margin"
                    android:drawableStart="@drawable/ic_form_phone"
                    android:hint="@string/no_telp"
                    android:inputType="number"
                    android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:drawableLeft="@drawable/ic_form_password"
                    android:drawablePadding="@dimen/activity_vertical_margin"
                    android:drawableStart="@drawable/ic_form_password"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                app:cardCornerRadius="2dp"
                app:cardUseCompatPadding="true">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/login_textview"
                        style="@style/Base.TextAppearance.AppCompat.Subhead"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimary"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/masuk"
                        android:textAllCaps="true"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"/>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/daftar_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:gravity="center"
                android:text="@string/daftar"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"/>

        </LinearLayout>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>